# passai

./: .env.example  README.md  app.py  flask_app.py  pass_generator.py  pyproject.toml  streamlit_app.py
data/: llm_instruction.md  models.py  words.txt
static/: scripts.js  styles.css
templates/: index.html
