[project]
name = "passai"
version = "1.0.0"
description = "AI-powered password and passphrase generator with natural language input"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "mdonmez"}
]
keywords = ["password", "passphrase", "generator", "ai", "security", "flask"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=3.1.1",
    "instructor[litellm]>=1.10.0",
    "litellm>=1.75.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    "gunicorn>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/mdonmez/passai"
Repository = "https://github.com/mdonmez/passai"
Issues = "https://github.com/mdonmez/passai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
